--- a/Галиев_A_lab_3.ipynb
+++ b/Галиев_A_lab_3.ipynb
@@ -105,23 +105,23 @@ print(df.dtypes.head(20))
 
 # %%
 
-# 7) Кодирование бинарных признаков (пример: пол)
+# 7) Кодирование пола / гендера
 gender_like = [c for c in df.columns if c.lower() in {"gender","sex","пол"}]
-mapping_known = {
-    "male": 0, "м": 0, "m": 0, "man": 0, "муж": 0, "мужчина": 0,
-    "female": 1, "ж": 1, "f": 1, "woman": 1, "жен": 1, "женщина": 1,
-}
+
 for col in gender_like:
-    if df[col].dtype == "O":
-        df[col] = df[col].astype(str).str.strip().str.lower().map(mapping_known)
-    uniques = [u for u in pd.unique(df[col]) if pd.notna(u)]
-    if len(uniques) == 2 and set(uniques) <= {0,1}:
-        pass
-    elif len(uniques) == 2:
-        u0, u1 = uniques[0], uniques[1]
-        df[col] = df[col].map({u0:0, u1:1})
-for col in gender_like:
-    print(col, "→ уникальные:", pd.unique(df[col]))
+    # нормализуем текст
+    df[col] = df[col].astype(str).str.strip().str.lower()
+    
+    # заменим стандартные варианты на "male"/"female"
+    df[col] = df[col].replace({
+        "м": "male", "m": "male", "man": "male", "муж": "male", "мужчина": "male",
+        "ж": "female", "f": "female", "woman": "female", "жен": "female", "женщина": "female"
+    })
+    
+    # теперь делаем One-Hot Encoding → каждое уникальное значение в отдельный столбец
+    df = pd.get_dummies(df, columns=[col], prefix=col, dummy_na=False)
+
+print("После кодирования пола:", df.shape)
 
 
 # %%
